tests/fsharp/core/array-no-dot-warnings/test-langversion-5.0.bsl

test-langversion-5.0.fsx(9,18,9,21): typecheck error FS0001: The type 'float' does not match the type 'int'

test-langversion-5.0.fsx(9,16,9,17): typecheck error FS0043: The type 'float' does not match the type 'int'
